--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -61,7 +61,7 @@
     <button class="title-btn fade-in" id="outside-btn" onclick="send_user_data(this)">Outside</button>
     <button class="title-btn fade-in" id="inside-btn" onclick="send_user_data(this)">Inside</button>
 
-    <a href="{% url 'friends' %}">
+    <a href="{% url 'friends_page' %}">
         <button class="title-btn fade-in" id="friends-btn" onclick="friends_tab()">Friends >></button>
     </a>
     <div class="output-wrapper">
