--- a/homepage/static/css/friends.css
+++ b/homepage/static/css/friends.css
@@ -14,13 +14,17 @@ textarea {
 }
 
 body {
+    font-family: Helvetica, Arial, sans-serif;
+
     background-color: salmon;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     min-height: 100vh;
     overflow: hidden;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 ::-webkit-scrollbar {
@@ -40,6 +44,27 @@ body {
     border-radius: 10px;
     background: rgb(254, 255, 223);
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+.friend-wrapper {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    left: 100vw;
+    transition: left ease .5s;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#homepage-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 1%;
+    height: 25px;
+    width: 25px;
 }
 
 .outer-border {
@@ -100,6 +125,28 @@ body {
                 right: 0;
             }
 
+        .friends-tab-selector {
+            width: 100%;
+            height: 30px;
+            padding: 7px;
+            align-items: center;
+            cursor: pointer;
+            border-radius: var(--bord-rad);
+        }
+
+        .friends-tab-selector:hover {
+            background-color: rgba(255, 255, 255, .2) !important;
+        }
+
+            .friends-tab-selector span {
+                cursor: pointer;
+                font-size: .8rem;
+            }
+
+            .friends-tab-selector i {
+                font-size: .8rem;
+            }
+
         .create-chat-div {
             display: flex;
             position: relative;
@@ -107,29 +154,43 @@ body {
             padding: 10px;
             height: 30px;
             width: var(--sb-width);
+            border-radius: var(--bord-rad);
         }
 
-            .create-chat-div span {
-                font-size: .8rem;
+            .create-chat-div:hover {
+                color: rgb(250, 250, 242) !important;
             }
 
+            .create-chat-div span {
+                position: absolute;
+                cursor: default;
+                font-size: .6rem;
+                bottom: 5%;
+                left: 5%;
+            }
+
+
             .create-chat-div button {
+                cursor: pointer;
                 position: absolute;
                 display: flex;
                 align-items: center;
                 padding: 0px;
-                width: 20px;
-                height: 20px;
-                right: 0;
+                width: 15px;
+                height: 15px;
+                right: 5%;
+                bottom: -10%;
                 background-color: transparent;
                 border: none;
                 z-index: 2;
+                text-align: center;
             }
 
                 button i {
-                    font-size: 1rem;
+                    font-size: .7rem;
                     width: 100%;
                     height: 100%;
+                    
                 }
 
         .friend-column {
@@ -138,7 +199,7 @@ body {
             width: var(--sb-width);
             overflow-y: auto; 
             overflow-x: hidden;
-            border-top: 1px solid #ddd; 
+            /* border-top: 1px solid rgb(254, 255, 223); */
             /* border-radius: var(--bord-rad); */
         }
 
@@ -153,12 +214,13 @@ body {
                     position: relative;
                     width: var(--sb-width);
                     height: 60px;
-                    border-bottom: 1px solid #ddd;
+                    /* border-bottom: 1px solid rgb(254, 255, 223); */
                     padding: 15px; 
+                    border-radius: var(--bord-rad);
                 }
 
                 .friend-list-div:hover {
-                    background-color: rgba(255, 255, 255, .25);
+                    background-color: rgba(255, 255, 255, .25) !important;
                 }
 
                     .friend-list img {
@@ -198,6 +260,9 @@ body {
         background-color: rgba(0, 0, 0, .1);
 
         border-bottom-right-radius: var(--bord-rad);
+
+        opacity: 0;
+        pointer-events: none;
     }
 
         .chat-messages {
@@ -254,7 +319,8 @@ body {
 
 
             .curr-message textarea {
-                border-radius: 15px;
+                border-radius: 5px;
+                padding: 5px;
                 width: 85%;
                 height: 50%;
             }
@@ -275,3 +341,82 @@ body {
                 height: 100%;
                 width: 100%;
             }
+
+
+    .friend-tab {
+        position: absolute;
+        width: var(--chat-width);
+        min-width: 400px;
+        height: 100%;
+        left: var(--sb-width);
+        background-color: rgba(0, 0, 0, .1);
+
+        border-bottom-right-radius: var(--bord-rad);
+    }
+
+        .friend-request {
+            height: 50px;
+            width: 95%;
+            display: flex;
+            align-items: center;
+            margin: 5px 10px;
+            margin-top: 10px;
+            background-color: rgba(0, 0, 0, .2);
+            border-radius: 5px;
+        }
+
+            .friend-request span {
+                margin: 10px;
+            }
+
+        .friend-tab-list {
+            list-style-type: none;
+            width: 100%;
+            height: 90%;
+            padding: 0;
+            margin: 0;
+            
+            align-items: center;
+            overflow-y: auto;
+            overflow-x: hidden;
+
+        }
+
+            .friend-tab-div {
+                width: 95%;
+                background-color: rgba(0, 0, 0, .2);
+                margin: 5px 10px;
+                height: 60px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                border-radius: 5px;
+            }
+
+            .friend-tab-div:hover {
+                background-color: rgba(255, 255, 255, .1);
+            }
+
+                .friend-tab-div img {
+                    height: 40px;
+                    width: 40px;
+                    margin: 10px;
+                }
+
+                .friend-tab-div div {
+                    height: 20px;
+                    width: 20px;
+                    border-radius: 30px;
+                    margin-right: 10px;
+                }
+
+                .friend-tab-div li {
+                    margin: 10px;
+                }
+
+                .friend-tab-div span {
+                    margin-left: auto;
+                    margin-right: 10px;
+                }
+
+                
