--- a/homepage/static/css/friends.css
+++ b/homepage/static/css/friends.css
@@ -21,10 +21,6 @@ body {
     
     min-height: 100vh;
     overflow: hidden;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 ::-webkit-scrollbar {
@@ -51,11 +47,39 @@ body {
     height: 100vh;
     width: 100vw;
     left: 100vw;
-    transition: left ease .5s;
+    transition: opacity ease .5s, left ease .5s;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    opacity: 0%;
+    pointer-events: none;
+
+}
+
+
+.friend-request button {
+
+    margin-right: 10px;
+
+    border: none;
+    background-color: transparent;
+    color: rgb(254, 255, 223);
+    
+}
+
+.friend-tab-list-wrapper span {
+    margin: 10px;
+}
+
+.friend-tab-list-wrapper {
+    height: 90%;
+    width: 100%;
+}
+#friends-tab-btn {
+    margin-left: auto;
+}
+
+.friend-request button:hover {
+    color: white;
 }
 
 #homepage-btn {
@@ -75,6 +99,10 @@ body {
     min-height: 350px;
     background-color: rgb(227, 97, 97);
     border-bottom-right-radius: var(--bord-rad);
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .ui-wrapper {
     position: absolute;
@@ -369,10 +397,12 @@ body {
                 margin: 10px;
             }
 
+        
+
         .friend-tab-list {
             list-style-type: none;
             width: 100%;
-            height: 90%;
+            height: 100%;
             padding: 0;
             margin: 0;
             
