--- a/homepage/static/css/mainpage.css
+++ b/homepage/static/css/mainpage.css
@@ -14,6 +14,24 @@ body {
     min-height: 100vh;
 }
 
+.breathe_easy_logo {
+    height: 45px;
+    width: 60px;
+    position: absolute;
+    top: 10%;
+    left: 3%;
+}
+
+    .breathe_easy_logo div {
+        height: 45px;
+        width: 60px;
+    }
+
+    .breathe_easy_logo img {
+        height: 45px;
+        width: 60px;
+    }
+
 
 .homepage-wrapper {
     position: absolute;
@@ -48,9 +66,6 @@ body {
         transform: translateY(-50%);
     }
 
-    #logo-image {
-        left: 2%
-    }
 
     #premium {
         right: 17%;
@@ -118,4 +133,8 @@ body {
 #friends-btn:hover {
     right: 15px;
 
+}
+
+#premium path {
+    z-index: 2;
 }
