--- a/homepage/static/css/spinner.css
+++ b/homepage/static/css/spinner.css
@@ -1,11 +1,12 @@
 .lds-ripple {
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 400px;
+    height: 400px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     opacity: 0%;
+    transition: opacity ease 2s;
   }
 
   .lds-ripple div {
@@ -20,31 +21,31 @@
   }
   @keyframes lds-ripple {
     0% {
-      top: 36px;
-      left: 36px;
+      top: 200px;
+      left: 200px;
       width: 0;
       height: 0;
       opacity: 0;
     }
     4.9% {
-      top: 36px;
-      left: 36px;
+      top: 200px;
+      left: 200px;
       width: 0;
       height: 0;
       opacity: 0;
     }
     9% {
-      top: 36px;
-      left: 36px;
+      top: 200px;
+      left: 200px;
       width: 0;
       height: 0;
       opacity: 1;
     }
     100% {
-      top: 0px;
-      left: 0px;
-      width: 72px;
-      height: 72px;
+      top: 0;
+      left: 0;
+      width: 400px;
+      height: 400px;
       opacity: 0;
     }
   }
